--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">Merchant Provider</div>
+  <div class="entity-view__title">{{'MERCHANT_TITLE' | translate}}</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -9,7 +9,7 @@
         <img src="/assets/images/result-item-transaction-white.svg" alt="">
       </div>
       <div class="entity-view__info__data">
-        <div *ngIf="!addMode" class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
+        <div *ngIf="!addMode" class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
         <div class="entity-view__info__data__name">
           <div *ngIf="viewMode; else editableMode">
             {{entityBackup.name}}
@@ -22,22 +22,22 @@
         </div>
       </div>
       <div class="entity-view__info__edit">
-        <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)"> EDIT MERCHANT PROVIDER </div>
+        <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'MERCHANT_INFO_EDIT' | translate}}</div>
 
         <ng-template #editActions>
-          <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">SAVE</div>
+          <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">{{'MERCHANT_INFO_SAVE' | translate}}</div>
           <ng-template #editActionsEdit>
-            <div (click)="cancelEdit()">CANCEL</div>
-            <div class="entity-view__info__edit__update" (click)="saveProvider(entity)">UPDATE</div>
+            <div (click)="cancelEdit()">{{'MERCHANT_INFO_CANCEL' | translate}}</div>
+            <div class="entity-view__info__edit__update" (click)="saveProvider(entity)">{{'MERCHANT_INFO_UPDATE' | translate}}</div>
           </ng-template>
         </ng-template>
       </div>
     </form>
 
     <div class="entity-view__navigation">
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">PROCESSING</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="setIndex(2)">LOAD BALANCING</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">{{'MERCHANT_TAB_GENERAL' | translate}}</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">{{'MERCHANT_TAB_PROCESSING' | translate}}</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="setIndex(2)">{{'MERCHANT_TAB_LOADBALANCER' | translate}}</span>
     </div>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -62,6 +62,7 @@
       <md-tab>
         <table-memory class="merchant-provider-view__load-balancers" [title]="'Load Balancer'"
                       [data]="[]"
+                      [textOptions]="loadbalancerText"
                       [associationEnabled]="false"
                       [columnParams]="loadBalancerColumnParams"
                       [associateDataMapper]="loadBalancerMapper">
@@ -73,5 +74,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [cardsExpression]="'300px;300px;300px;300px'" [title]="'Merchant Provider'"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;300px;300px;300px'" [title]="'MERCHANT_TITLE' | translate"></spe-loader>
 </ng-template>
