--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -37,7 +37,7 @@
 
         <div class="entity-view__card__content">
           <md-input-container style="width: 120px;" class="entity-view__card__content__item">
-            <input disabled md-input placeholder="{{'REBILL_INFO_BILL' | translate}}" [(ngModel)]="billdate" type="text">
+            <input disabled md-input placeholder="{{'REBILL_INFO_BILLED' | translate}}" [(ngModel)]="billdate" type="text">
           </md-input-container>
 
           <md-input-container style="width: 120px;" class="entity-view__card__content__item">
