Update credit cards e2e tests

--- a/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
@@ -33,7 +33,7 @@
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.address.line2">
-        <input md-input name="address" [(ngModel)]="customer.address.line2" placeholder="{{'FORMINPUTS_CITY' | translate}}" type="text">
+        <input md-input name="address" [(ngModel)]="customer.address.line2" placeholder="{{'FORMINPUTS_ADDRESS2' | translate}}" type="text">
       </md-input-container>
 
     </div>
