--- a/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
+++ b/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
@@ -25,7 +25,7 @@
       <div *ngIf="viewMode; else editButtons" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'LOADBALANCER_INFO_EDIT' | translate}}</div>
       <ng-template #editButtons>
         <div *ngIf="updateMode" (click)="cancelUpdate()">{{'LOADBALANCER_INFO_CANCEL' | translate}}</div>
-        <div class="entity-view__info__edit__update" (click)="updateLoadBalancer()"> {{ addMode ? 'LOADBALANCER_INFO_SAVE' : 'LOADBALANCER_INFO_UPDATE'}}</div>
+        <div class="entity-view__info__edit__update" (click)="updateLoadBalancer()"> {{ (addMode ? 'LOADBALANCER_INFO_SAVE' : 'LOADBALANCER_INFO_UPDATE') | translate}}</div>
       </ng-template>
     </div>
   </div>
