Add german translations option

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -55,7 +55,7 @@
                 <dropdown-component
                   [selected]="userSettingsBackup.language || 'English'"
                   [placeholder]="'PROFILE_DETAILS_LANGUAGE' | translate"
-                  [options]="['English', 'French']"
+                  [options]="translationsService.getLanguages()"
                   (onSelect)="setLanguage($event)">
                 </dropdown-component>
 
